<resources>
    <string name="app_name">Loystar</string>
    <string name="merchant_sign_in">auth/sign_in</string>
    <string name="get_pricing_plans_url">pricing_plans</string>
    <string name="confirm_mobile_money_payment_url">subscriptions/confirm_mobile_money_payment</string>
    <string name="pay_sub_with_mobile_money">subscriptions/pay_with_mobile_money</string>
    <string name="create_sms_campaign">short_message_service_campaigns</string>
    <string name="create_user_at_merchant_level">merchants/mCustomers</string>
    <string name="create_merchant_loyalty_program">merchant_loyalty_programs</string>
    <string name="get_all_merchant_programs">get_all_merchant_programs/</string>
    <string name="get_all_merchant_users">merchant/mCustomers/</string>
    <string name="get_sms_balance">merchants/get_sms_balance/</string>
    <string name="update_merchant_program">merchant_loyalty_programs/</string>
    <string name="merchant_base_path">auth</string>
    <string name="check_special_fields">check_phone_and_email</string>
    <string name="send_feedback_url">send_feedback</string>
    <string name="get_transaction">transactions/</string>
    <string name="add_points_at_merchant_level">transactions/add_points_at_merchant_level</string>
    <string name="add_stamps_at_merchant_level">transactions/add_stamps_at_merchant_level</string>
    <string name="get_latest_merchant_users">get_latest_merchant_users</string>
    <string name="get_latest_merchant_users_via_digits">get_latest_merchant_users_via_digits</string>
    <string name="get_latest_transaction_records">get_latest_transaction_records</string>
    <string name="send_password_reset_email">auth/password</string>
    <string name="get_latest_merchant_programs">get_latest_merchant_programs</string>
    <string name="update_user">mCustomers/</string>
    <string name="get_latest_user_profiles">get_latest_updated_user_profiles</string>
    <string name="delete_merchant_user">delete_merchant_user/</string>
    <string name="get_latest_deleted_users">get_latest_deleted_users</string>
    <string name="get_pricing_plan_price">get_pricing_plan_price</string>
    <string name="send_sms">short_message_services</string>
    <string name="get_merchant_subscription_info">get_merchant_subscription_info/</string>
    <string name="create_user_without_loyalty_program">create_user_without_loyalty_program</string>
    <string name="create_transaction_without_loyalty_program">create_transaction_without_loyalty_program/</string>
    <string name="update_merchant">merchants/</string>
    <string name="search_product_categories">search_product_categories/</string>
    <string name="start_transaction">Start a transaction </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Serve Customer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="fname">First name</string>
    <string name="lname">Last name</string>
    <string name="email">Email </string>
    <string name="phone">Phone</string>
    <string name="amount_spent">Amount spent by customer</string>
    <string name="register_btn">Register</string>
    <string name="title_activity_merchant_signup"> Create an Account </string>
    <string name="title_activity_register_user">Register User</string>
    <string name="business_name">Business name</string>
    <string name="next_btn">Continue</string>
    <string name="login_link">Have an account? Login here</string>
    <string name="set_password">Set a password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="complete_signup_btn">Finish</string>
    <string name="select_biz_category">Select Business Category</string>
    <string name="business_category">Business Category</string>
    <string name="food_and_drinks">Food and Drinks</string>
    <string name="hair_and_beauty">Hair and Beauty</string>
    <string name="fashion_and_accessories">Fashion and Accessories</string>
    <string name="gym_and_fitness">Gym and Fitness</string>
    <string name="beverages_and_deserts">Beverages and Desserts</string>
    <string name="salon_and_beauty_reward_eg">E.g. Free hairdo.</string>
    <string name="fashion_and_accessories_reward_points">E.g. 20% discount on your next purchase.</string>
    <string name="fashion_and_accessories_reward_stamps">E.g. 1 free fashion item.</string>
    <string name="gym_and_fitness_reward_stamps">E.g. 1 free session.</string>
    <string name="gym_and_fitness_reward_points">E.g. 20% discount on your next subscription.</string>
    <string name="discount_on_next_purchase">E.g. 20% discount on your next purchase.</string>
    <string name="bakery_and_pastry">Bakery and Pastry</string>
    <string name="travel_and_hotel">Travel and Hotel</string>
    <string name="other">Other</string>
    <string name="beverages_and_deserts_reward">eg. Free bottle of wine</string>
    <string name="next_purchase_free">E.g. Next purchase free</string>
    <string name="travel_and_hotel_reward">E.g. 20% discount on your next travel</string>
    <string name="one_month">1-month</string>
    <string name="three_months">3-months</string>
    <string name="six_months">6-months</string>
    <string name="twelve_months">12-months</string>
    <string-array name="subs_duration">
        <item>@string/one_month</item>
        <item>@string/three_months</item>
        <item>@string/six_months</item>
        <item>@string/twelve_months</item>
    </string-array>
    <string name="title_activity_merchant_login">Welcome to Loystar</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_invalid_email">Email is invalid</string>
    <string name="error_invalid_password">Password is too short</string>
    <string name="error_incorrect_password">Password is incorrect. Please try again.</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed"
    </string>
    <string name="register_link">No account yet?</string>
    <string name="title_activity_merchant_back_office">Merchant Back Office</string>
    <string name="home_menu">Home</string>
    <string name="business_profile_menu">Business Profile</string>
    <string name="loyalty_program_menu">Loyalty Programs</string>
    <string name="communications_menu">Communications</string>
    <string name="staff_mgmt_menu">Manage Staff</string>
    <string name="outlet_mgmt_menu">Manage Outlets</string>
    <string name="license_menu">License</string>
    <string name="help_menu">Help and Feedback</string>
    <string name="staff_outlet_mgmt_menu"><![CDATA[Staff & Outlet]]></string>
    <string name="referral_copy"> Got a promo code and looking for a place to enter it? Here:Enter your promocode here Want to reduce your payments? You can cut down on your Pipedrive subscription payments by recommending Pipedrive to your friends. You earn their first month\'s payment as credit on your account.</string>
    <string name="title_activity_loyalty_programs">LoyaltyPrograms</string>
    <string name="simple_points_program_description">For every transaction, customers get the equivalent points value you set.</string>
    <string name="stamp_program_description">Customers buy a specific item for a number of times you set, before they get their next purchase free.</string>
    <string name="raffle_program_description">Customers spend to increase their chances in the draw. For every spend, customers get communicated via SMS their total spend.</string>
    <string name="submit">Submit</string>
    <string name="ok">OK</string>
    <string name="enter_mob_money_no">Enter mobile money number</string>
    <string name="tigo">Tigo</string>
    <string name="mtn">MTN</string>
    <string name="airtel">Airtel</string>
    <string name="send_annoucement">Send Announcement</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_pass_header_text">Submit your email address and we\'ll send you a code to reset your password.</string>
    <string name="record_sale">Sell</string>
    <string name="or_caps">OR</string>
    <string name="pref_header_general">General Information</string>
    <string name="drawer_settings">Settings</string>
    <string name="pref_account_title">Account Information</string>
    <string name="pref_account_status_title">Status</string>
    <string name="pref_account_status_key">account_status</string>
    <string name="pref_pay_subscription_title">Pay Subscription</string>
    <string name="pref_edit_account_title">Edit Profile</string>
    <string name="pref_pay_subscription_key">pay_subscription</string>
    <string name="pref_edit_account_key">edit_account</string>
    <string name="pref_check_sms_bal_title">Check SMS Balance</string>
    <string name="pref_check_sms_bal_key">check_sms_balance</string>
    <string name="pref_confirm_mm_payment_key">confirm_mm_payment</string>
    <string name="pref_confirm_mm_payment_title">Confirm Payments</string>
    <string name="pref_sign_out_key">sign_out</string>
    <string name="pref_support_key">account_support</string>
    <string name="pref_support_title">Customer Support</string>
    <string name="pref_sign_out_title">Sign out</string>
    <string name="pref_app_version_key">app_version</string>
    <string name="pref_app_version_title">App version</string>
    <string name="pref_privacy_policy_key">privacy_policy</string>
    <string name="pref_privacy_policy_title">Privacy Policy</string>
    <string name="pref_turn_on_loyalty_programs_key">turn_on_loyalty_programs</string>
    <string name="pref_turn_on_loyalty_programs_title">Turn On Loyalty Programs</string>
    <string name="customers_title">Customers</string>
    <string name="pref_setup_loyalty_programs_key">pref_set_up_loyalty_programs</string>
    <string name="pref_setup_loyalty_programs_title">Setup Loyalty Programs</string>
    <string name="pref_loyalty_programs_header_title">Loyalty Programs Settings</string>
    <string name="pref_send_feed_back_key">pref_send_feed_back</string>
    <string name="pref_send_feed_back_title">Loystar Care</string>
    <string name="pref_setup_birthday_offer_key">pref_setup_birthday_offer</string>
    <string name="pref_setup_birthday_offer_title">Setup Birthday Messages &amp; Offers</string>
    <string name="sign_in_with_phone"><u>Sign in with your phone number</u></string>
    <string name="sign_up_btn_text">New to Loystar? Sign Up</string>
    <string name="reports">Reports</string>
    <string name="password_form_header_text">Please enter account password</string>
    <string name="campaigns">Campaigns</string>
    <string name="settings_account">account_settings</string>
    <string name="account">Account</string>
    <string name="general">General</string>
    <string name="settings_general">general_settings</string>
    <string name="settings_loyalty_programs">loyalty_settings</string>
    <string name="birthday_messages_and_offers">Birthday Messages &amp; Offers</string>
    <string name="settings_birthday_messages_and_offers">settings_birthday_messages_and_offers</string>
    <string name="pos">Point of Sale (POS)</string>
    <string name="settings_pos">settings_pos</string>
    <string name="customer_autocomplete_hint">Enter customer name or number</string>
    <string name="title_loyaltyprogram_list">My Loyalty Programs</string>
    <string name="sales_belongs_to">This sale belongs to</string>
</resources>