<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_loyalty_program"
            android:icon="@drawable/ic_loyalty_program"
            android:title="@string/loyalty_program_menu" />

        <item
            android:id="@+id/nav_comms"
            android:icon="@drawable/ic_marketing"
             android:title="@string/send_annoucement" />

        <item
            android:id="@+id/reports"
            android:icon="@drawable/ic_view_list_black_48px"
            android:title="@string/reports" />

    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">

        <item
            android:id="@+id/drawer_item_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/drawer_settings" >
        </item>
    </group>



</menu>
