<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/content_padding_normal"
    android:layout_margin="@dimen/content_padding_normal"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/mobile_money_number_wrapper"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:hint="@string/enter_mob_money_no"
            android:id="@+id/mobile_money_number"
            android:layout_gravity="center_horizontal" />

    </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/wallet_provider"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mtn"
            android:onClick="onRadioButtonClicked"
            android:id="@+id/mtn_provider" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/airtel"
            android:onClick="onRadioButtonClicked"
            android:id="@+id/airtel_provider" />

        <RadioButton
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tigo"
            android:onClick="onRadioButtonClicked"
            android:id="@+id/tigo_provider" />

         </RadioGroup>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/okpay"
            android:text="@string/ok"
            android:layout_gravity="center" />
    </RelativeLayout>
</LinearLayout>