<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_record_direct_sales"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:mContext="co.loystar.loystarbusiness.fragments.RecordDirectSalesActivityFragment">

    <TextView
        android:id="@+id/order_belongs_to_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sales_belongs_to"
        style="@style/textViewLabelTextStyle" />

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/order_belongs_to_label"
        android:hint="@string/customer_autocomplete_hint"
        android:id="@+id/record_direct_sales_customer_autocomplete"/>

    <TextView
        android:layout_below="@+id/record_direct_sales_customer_autocomplete"
        android:id="@+id/record_direct_sales_amount_spent_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount_spent"
        android:layout_marginTop="15dp"
        style="@style/textViewLabelTextStyle"/>

    <co.loystar.loystarbusiness.utils.ui.CurrencyEditText.CurrencyEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/record_direct_sales_amount_spent_label"
        app:formatWithTextFormatter="false"
        android:id="@+id/record_direct_sales_amount_spent" />

    <co.loystar.loystarbusiness.utils.ui.Buttons.BrandButtonNormal
        android:layout_below="@id/record_direct_sales_amount_spent"
        android:id="@+id/fragment_next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_btn"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:textAppearanceMedium" />


</RelativeLayout>
