<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:mContext="co.loystar.loystarbusiness.fragments.OrderBelongsToFragment">

    <TextView
        android:id="@+id/order_belongs_to_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sales_belongs_to"
        android:textSize="16sp"
        android:textColor="@color/wallet_hint_foreground_holo_dark"/>

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/order_belongs_to_label"
        android:hint="@string/customer_autocomplete_hint"
        android:id="@+id/fragment_order_belongs_to_customer_autocomplete"/>

    <co.loystar.loystarbusiness.utils.ui.Buttons.BrandButtonNormal
        android:layout_below="@+id/fragment_order_belongs_to_customer_autocomplete"
        android:id="@+id/fragment_order_belong_to_next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_btn"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:textAppearanceMedium" />

</RelativeLayout>
