<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:mContext="co.loystar.loystarbusiness.activities.ForgotPasswordActivity"
    tools:showIn="@layout/activity_forgot_password">

    <TextView
        android:id="@+id/reset_pass_header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/reset_pass_header_text"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_wrapper"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/reset_pass_header_text"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <co.loystar.loystarbusiness.utils.ui.Buttons.BrandButtonNormal
        android:layout_below="@+id/email_wrapper"
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="30dp"
        android:textSize="@dimen/login_button_text_size" />

</RelativeLayout>
